# MinimalBuildTemplate

./: .gitignore  CMakeLists.txt  ConanWrapper.cmake  README.md  build.bat  build.sh  build_cmake.ps1  build_with_dockcross.sh  clean.bat  conanfile.txt  fix_vscode_paths.py  meson.build  sign.py
conan_profiles/: gcc10_armv7_linux.profile  vs2017_x64.profile
src/: .clang-format  CMakeLists.txt  main.cpp
vscode_template/: c_cpp_properties.json  cmake_variants.json  launch.json  tasks.json
